--- a/cloud-1202-config/src/main/resources/application.properties
+++ b/cloud-1202-config/src/main/resources/application.properties
@@ -7,9 +7,19 @@ eureka.client.service-url.defaultZone=http://localhost:8081/eureka/
 spring.cloud.config.label=master
 
 #本地配置文件的地址
-spring.cloud.config.server.native.search-locations=E:/Java/myidea/springcloud-config/cloud-1202
+#spring.cloud.config.server.native.search-locations=E:/Java/myidea/springcloud-config/cloud-1202
 
 #激活本地配置文件
-spring.profiles.active=native
+#spring.profiles.active=native
 
-eureka.client.register-with-eureka=true
+#eureka.client.register-with-eureka=true
+
+# 开始配置github
+# 配置github上面的仓库的地址(在浏览器上选择刚才创建仓库，直接复制地址栏中的地址)
+spring.cloud.config.server.git.uri=https://github.com/1607925416/springcloud-config
+# 配置github的账号
+spring.cloud.config.server.git.username=1607925416
+# 配置github的密码
+spring.cloud.config.server.git.password=yin19961011
+# 设置git仓库的搜索路径
+spring.cloud.config.server.git.search-paths={application}
